# ITI-MLOps

./: .gitignore  Makefile  dvc.yaml  dvc_creation.sh  main.py  params.yaml  pyproject.toml  server.py
.dvc/: config
conf/: config.yaml
conf/model/: random_forest.yaml
conf/pipeline/: tatanic.yaml
data/interim/: train.csv  val.csv
data/processed/: train.csv  val.csv
models/random_forest/: columns_transformer.pkl  random_forest.pkl  submission.csv
outputs/2025-05-18/15-52-13/.hydra/: hydra.yaml
outputs/2025-05-18/15-53-58/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-18/15-56-00/.hydra/: hydra.yaml
outputs/2025-05-18/15-59-43/.hydra/: hydra.yaml
outputs/2025-05-18/16-00-57/.hydra/: hydra.yaml
outputs/2025-05-23/11-29-51/.hydra/: hydra.yaml
outputs/2025-05-23/11-30-44/.hydra/: config.yaml  hydra.yaml
reports/random_forest/: evaluation_report.json
src/: config.py  core.py  evaluate.py  globals.py  logger.py  main.py  preprocessing.py  saver.py  tracking.py  train.py  utils.py
src/dataset/: data_loader.py  process_data.py
src/deployment/: api.py  requests.py
src/modeling/: evaluate.py  train.py
